修改lite中文管理员指南、工具参考、特性描述、简易教程关键字

--- a/content/docs-lite/zh/docs/Administratorguide/导出表.md
+++ b/content/docs-lite/zh/docs/Administratorguide/导出表.md
@@ -90,7 +90,7 @@ openGauss支持使用gs\_dump工具导出表级的内容，包含表定义和表
     </tbody>
     </table>
 
-    其他参数说明请参见《工具参考》中“服务端工具 \> gs\_dump”章节。
+    其他参数说明请参见《工具与命令参考》中“服务端工具 \> gs\_dump”章节。
 
 
 ## 示例<a name="zh-cn_topic_0283137162_zh-cn_topic_0237121171_zh-cn_topic_0096393572_s2612a8b058f24a14b1dfa8efd6f4c410"></a>
