--- a/content/docs-lite/zh/docs/Administratorguide/导出所有数据库-11.md
+++ b/content/docs-lite/zh/docs/Administratorguide/导出所有数据库-11.md
@@ -64,7 +64,7 @@ openGauss支持使用gs\_dumpall工具导出所有数据库的全量信息，包
     </tbody>
     </table>
 
-    其他参数说明请参见《工具参考》中“服务端工具 \> gs\_dumpall”章节。
+    其他参数说明请参见《工具与命令参考》中“服务端工具 \> gs\_dumpall”章节。
 
 
 ## 示例<a name="zh-cn_topic_0283137377_zh-cn_topic_0237121173_zh-cn_topic_0096392335_s3e34e9e7c7e948d49d1f24d6038514c0"></a>
