--- a/content/docs-lite/zh/docs/SQLReference/动态数据脱敏函数.md
+++ b/content/docs-lite/zh/docs/SQLReference/动态数据脱敏函数.md
@@ -2,7 +2,7 @@
 
 >![](public_sys-resources/icon-note.gif) **说明：** 
 >
->该函数为内部功能调用函数，详见《特性描述》中“数据库安全-动态数据脱敏机制”章节。
+>该函数为内部功能调用函数，详见《关于openGauss》中“特性描述-数据库安全-动态数据脱敏机制”章节。
 
 -   creditcardmasking\(col text, letter char default 'x'\)
 
