--- a/content/docs-lite/zh/docs/Administratorguide/逻辑备份与恢复.md
+++ b/content/docs-lite/zh/docs/Administratorguide/逻辑备份与恢复.md
@@ -1,9 +1,9 @@
 # 逻辑备份恢复<a name="ZH-CN_TOPIC_0289897021"></a>
 
--   **[gs\_dump](../Toolreference/gs_dump.md)**  
+-   **[gs\_dump](../ToolandCommandReference/gs_dump.md)**  
 
--   **[gs\_dumpall](../Toolreference/gs_dumpall.md)**  
+-   **[gs\_dumpall](../ToolandCommandReference/gs_dumpall.md)**  
 
--   **[gs\_restore](../Toolreference/gs_restore.md)**  
+-   **[gs\_restore](../ToolandCommandReference/gs_restore.md)**  
 
 
