--- a/content/docs-lite/zh/docs/DataBaseReference/连接设置.md
+++ b/content/docs-lite/zh/docs/DataBaseReference/连接设置.md
@@ -2,6 +2,18 @@
 
 介绍设置客户端和服务器连接方式相关的参数。
 
+## light\_comm
+**参数说明：** 指定服务器是否使用轻量通信方式
+
+该参数指定服务器是否使用基于轻量锁和非阻塞socket的通信方式。该参数属于POSTMASTER类型参数。请参考[表1](../Administration/参数设置.md#zh-cn_topic_0283137176_zh-cn_topic_0237121562_zh-cn_topic_0059777490_t91a6f212010f4503b24d7943aed6d846)中对应设置方法进行设置。
+
+**取值范围：**
+
+- ON / TRUE：表示使用轻量通信方式
+- OFF / FALSE：表示不使用轻量通信方式。
+
+**默认值：** OFF / FALSE
+
 ## listen\_addresses<a name="zh-cn_topic_0283136886_zh-cn_topic_0237124695_zh-cn_topic_0059777636_sed0adde99a3f47669f5d4ab557b36b35"></a>
 
 **参数说明：**声明服务器侦听客户端的TCP/IP地址。
