--- a/content/zh/docs/BriefTutorial/主备共享存储.md
+++ b/content/zh/docs/BriefTutorial/主备共享存储.md
@@ -46,7 +46,7 @@
 >此处的单步手动安装是指工程编译之后，可单步执行相关命令进行共享存储建库。openGauss常规安装请参照《安装指南》。
 
 -   前置条件
-    -   工程已完成代码编译，编译请参见[软件安装编译](../Compilationguide/版本编译.md)。
+    -   工程已完成代码编译，编译请参见[软件安装编译](../CompilationGuide/版本编译.md)。
     -   主机已经挂载磁阵LUN设备，并且已经安装ultrapath多路径软件，磁阵设备可用。
 
 
@@ -238,7 +238,7 @@
     3.  执行[1](#li0988195961613)\~[5](#li23296624419)完成gs\_initdb建库。
     4.  修改postgresql.conf配置文件。
 
-        配置ss\_interconnect\_type=RDMA，添加配置项ss\_rdma\_work\_config与ss\_ock\_log\_path。参数说明及配置请参见[共享存储参数](../DataBaseReference/共享存储参数.md)。
+        配置ss\_interconnect\_type=RDMA，添加配置项ss\_rdma\_work\_config与ss\_ock\_log\_path。参数说明及配置请参见[共享存储参数](../DatabaseReference/共享存储参数.md)。
 
         示例：
 
