--- a/content/zh/docs/SQLReference/安全函数.md
+++ b/content/zh/docs/SQLReference/安全函数.md
@@ -99,7 +99,7 @@
 
     -- str：需要被加密的字符串。若str为NULL，函数返回NULL。
 
-    -- key\_str：密钥字符串。若key\_str为NULL，函数返回NULL。为了安全，对于128bit/192bit/256bit的密钥长度（由块加密模式block\_encryption\_mode确定，参数介绍请参见[安全配置](../DataBaseReference/安全配置.md)），建议用户使用128bit/192bit/256bit的安全随机数作为密钥字符串。
+    -- key\_str：密钥字符串。若key\_str为NULL，函数返回NULL。为了安全，对于128bit/192bit/256bit的密钥长度（由块加密模式block\_encryption\_mode确定，参数介绍请参见[安全配置](../DatabaseReference/安全配置.md)），建议用户使用128bit/192bit/256bit的安全随机数作为密钥字符串。
 
     -- init\_vector：为需要它的块加密模式提供初始化变量，长度大于等于16字节（大于16的字节会被在自动忽略）。str和key\_str均不为NULL时，该参数不可为NULL，否则报错。为了安全，建议用户在OFB模式下，保证每次加密IV值的唯一性；在CBC模式和CFB模式下，保证每次加密的IV值不可被预测。
 
@@ -135,7 +135,7 @@
 
     -- pass\_str：需要被解密的字符串。若pass\_str为NULL，函数返回NULL。
 
-    -- key\_str: 密钥字符串。若key\_str为NULL，函数返回NULL。为了安全，对于128bit/192bit/256bit的密钥长度（由块加密模式block\_encryption\_mode确定，参数介绍请参见[安全配置](../DataBaseReference/安全配置.md)），建议用户使用128bit/192bit/256bit的安全随机数作为密钥字符串。
+    -- key\_str: 密钥字符串。若key\_str为NULL，函数返回NULL。为了安全，对于128bit/192bit/256bit的密钥长度（由块加密模式block\_encryption\_mode确定，参数介绍请参见[安全配置](../DatabaseReference/安全配置.md)），建议用户使用128bit/192bit/256bit的安全随机数作为密钥字符串。
 
     -- init\_vector：为需要它的块解密模式提供初始化变量，长度大于等于16字节（大于16的字节会被在自动忽略）。pass\_str和key\_str均不为NULL时，该参数不可为NULL，否则报错。为了安全，建议用户在OFB模式下，保证每次加密IV值的唯一性；在CBC模式和CFB模式下，保证每次加密的IV值不可被预测。
 
