修改sql_mode，分区表，user@host等部分文档

--- a/content/zh/docs/DatabaseAdministrationGuide/用户.md
+++ b/content/zh/docs/DatabaseAdministrationGuide/用户.md
@@ -68,5 +68,5 @@ CREATE USER user_persistence WITH persistence IDENTIFIED BY "1234@abc";
 - 只含有user_name。比如user_name的优先级低于user_name@127%。
 - 只含有'%'优先级最低。可匹配所有用户
 
-具体创建的用户名称详情见[CREATE USER](CREATE-USER.md)语句。
+具体创建的用户名称详情见[CREATE USER](../SQLReference/CREATE-USER.md)语句。
 
