--- a/content/docs-lite/zh/docs/Administration/用户.md
+++ b/content/docs-lite/zh/docs/Administration/用户.md
@@ -67,5 +67,5 @@ openGauss=# CREATE USER user_persistence WITH PERSISTENCE IDENTIFIED BY "1234@ab
 - 只含有user_name。比如user_name的优先级低于user_name@127%。
 - 只含有'%'优先级最低。可匹配所有用户
 
-具体创建的用户名称详情见[CREATE USER](CREATE-USER.md)语句。
+具体创建的用户名称详情见[CREATE USER](../SQLReference/CREATE-USER.md)语句。
 
