--- a/content/zh/docs/SQLReference/错误捕获语句.md
+++ b/content/zh/docs/SQLReference/错误捕获语句.md
@@ -139,7 +139,7 @@ END;
 
 > ![](public_sys-resources/icon-note.gif)**说明：** 
 >
-> 由于OG异常处理机制与M*数据库不同，只在SQL执行发生异常时才进行异常处理，产生warning等不进行异常处理。
+> 由于OpenGauss异常处理机制与MySQL数据库不同，只在SQL执行发生异常时才进行异常处理，产生warning等不进行异常处理。
 
 -   **condition\_value**
     -   mysql_error_code：除0和1之外的整型数字。
