--- a/content/zh/docs/DataMigration/增量迁移.md
+++ b/content/zh/docs/DataMigration/增量迁移.md
@@ -6,117 +6,138 @@
 
 ## 原理简介<a name="section75651553269"></a>
 
-基于开源三方件mysql-binlog-connector-java解析mysql的binlog，并根据mysql主备并行复制的原理，对可并行的事务在openGauss端采用多线程进行并行回放，以实现MySQL到openGauss端的在线迁移。其中并行事务的判断规则为：如果所有正在回放的事务的最小sequence\_number大于该事务的last\_committed，那么该事务就可以并行执行。该方案可以严格保证事务的顺序和一致性。
+debezium mysql connector的source端，监控mysql数据库的binlog日志，并将数据（DDL和DML操作）以AVRO格式写入到kafka；debezium mysql connector的sink端，从kafka读取AVRO格式数据（DDL和DML操作），并组装为事务，在openGauss端按照事务粒度并行回放，从而完成数据（DDL和DML操作）从mysql在线迁移至openGauss端。由于该方案严格保证事务的顺序性，因此将DDL和DML路由在kafka的一个topic下，且该topic的分区数只能为1(参数num.partitions=1)，从而保证source端推送到kafka，和sink端从kafka拉取数据都是严格保序的。
 
 ## 特性优势<a name="section2124757135"></a>
 
-利用sysbench对mysql进行压测，在10张表30个线程并发情况下，针对IUD混合场景，在Kunpeng-920 2p openEuler机器上测试，整体在线迁移性能可达3w tps。
+利用sysbench对MySQL进行压测，在openEuler arm操作系统2p Kunpeng-920机器，针对混合IUD场景，10张表50个线程（insert-30线程，update-10线程，delete-10线程），在线迁移性能可达3w tps。
 
 ## 操作步骤<a name="section102376152046"></a>
 
--   **源码编译**
+增量迁移gs_replicate依赖MySQL一键式迁移工具gs_rep_portal，可实现增量迁移的安装、启动、停止、卸载整个过程。
 
-1.  执行如下命令在[代码仓库](https://gitee.com/opengauss/openGauss-tools-onlineMigration-mysql)下载源码。
+- 下载gs_rep_portal
 
-    ```
-    git clone https://gitee.com/opengauss/openGauss-tools-onlineMigration-mysql.git
-    ```
+  ```
+  wget https://opengauss.obs.cn-south-1.myhuaweicloud.com/tools/portal/PortalControl-5.0.0.tar.gz
+  ```
 
-2.  修改配置文件。配置文件的路径为openGauss-tools-onlineMigration-mysql/mysql2openGauss/config.yml。
+  解压，并进入portal对应目录
 
-    配置文件示例如下：
+  ```
+  tar -zxvf PortalControl-5.0.0.tar.gz
+  cd portal
+  ```
 
-    ```
-    #openGauss config
-    openGauss_conn:  
-      host: "127.0.0.1"  
-      port: "5432"  
-      user: "opengauss"  
-      password: "password123"  
-      database: "postgres" 
-    
-    #mysql config
-    mysql_conn:  
-      host: "127.0.0.1"  
-      port: "3306"  
-      user: "mysql"  
-      password: "password123"  
-      database: "mysql"
-    ```
+- 修改gs_rep_portal配置文件
 
-3.  编译命令。
+  配置文件位于config目录内，增量迁移相关的配置文件主要包含如下两个，相关参数含义简要说明如下：
 
-    ```
-    cd openGauss-tools-onlineMigration-mysql/mysql2openGauss/
-    mvn clean package
-    ```
+  （1）toolspath.properties
 
-4.  运行命令。
+  ```
+  # 增量迁移依赖包路径，可自定义修改
+  debezium.path=/ops/portal/tools/debezium/
+  # kafka路径，位于增量迁移依赖包路径下，可自定义修改
+  kafka.path=/ops/portal/tools/debezium/kafka_2.13-3.2.3/
+  # confluent路径，位于增量迁移依赖包路径下，可自定义修改
+  confluent.path=/ops/portal/tools/debezium/confluent-5.5.1/
+  # connector路径，位于增量迁移依赖包路径下，可自定义修改
+  connector.path=/ops/portal/tools/debezium/plugin/
+  # debezium mysql connector路径，位于connector路径下，可自定义修改
+  connector.mysql.path=/ops/portal/tools/debezium/plugin/debezium-connector-mysql/
+  # kafka下载路径
+  kafka.pkg.url=https://downloads.apache.org/kafka/3.2.3/kafka_2.13-3.2.3.tgz
+  # confluent下载路径
+  confluent.pkg.url=https://packages.confluent.io/archive/5.5/confluent-community-5.5.1-2.12.zip
+  # debezium mysql connector下载路径
+  connector.mysql.pkg.url=https://opengauss.obs.cn-south-1.myhuaweicloud.com/latest/tools/replicate-mysql2openGauss-5.0.0.tar.gz
+  # 增量迁移依赖安装包路径，可自定义修改
+  debezium.pkg.path=/ops/portal/pkg/debezium/
+  # kafka包名
+  kafka.pkg.name=kafka_2.13-3.2.3.tgz
+  # confluent包名
+  confluent.pkg.name=confluent-community-5.5.1-2.12.zip
+  # mysql2openGauss在线复制包名
+  connector.mysql.pkg.name=replicate-mysql2openGauss-5.0.0.tar.gz
+  ```
 
-    ```
-    java -jar ./target/online-migration-mysql-3.1.0.jar
-    ```
+  （2）migrationConfig.properties
 
-5.  高性能运行命令。在Kunpeng-920 2p openEuler机器上执行如下命令。
+  ```
+  # mysql用户名
+  mysql.user.name=root
+  # mysql密码
+  mysql.user.password=***
+  # mysql数据库ip
+  mysql.database.host=127.0.0.1
+  # mysql数据库端口
+  mysql.database.port=3306
+  # mysql数据库名称
+  mysql.database.name=test123
+  # openGauss用户名
+  opengauss.user.name=test
+  # openGauss密码
+  opengauss.user.password=***
+  # openGauss数据库ip
+  opengauss.database.host=127.0.0.1
+  # openGauss数据库端口
+  opengauss.database.port=5432
+  # openGauss数据库名称
+  opengauss.database.name=test1234
+  # openGauss数据库的schema名称
+  opengauss.database.schema=test123
+  # 在线迁移的安装方式，默认为offline，表示离线安装，需通过参数debezium.pkg.path指定离线依赖安装包的路径；若设置为online，对应在线安装，在线下载的安装包将存放在参数debezium.pkg.path指定的路径
+  default.install.mysql.incremental.migration.tools.way=offline
+  ```
+  
+- 安装
 
-    ```
-    numactl -C 0-31 -m 0 java -Xms15G -Xmx25G -jar ./target/online-migration-mysql-3.1.0.jar
-    ```
+  ```
+  sh gs_replicate.sh install mysql-opengauss workspace.id
+  ```
 
+  其中workspace.id表示迁移任务id，取值为数字和小写字母的组合，不同的id区分不同的迁移任务，不同迁移任务可并行启动。若使用已存在的workspace.id，并修改其中的配置，请在portal/workspace/${workspace.id}/config/路径下修改对应的配置文件。
 
--   **二进制运行**
+- 启动
 
-1.  通过如下链接下载压缩包并解压。
+  ```
+  sh gs_replicate.sh start mysql-opengauss workspace.id
+  ```
 
-    ```
-    https://opengauss.obs.cn-south-1.myhuaweicloud.com/3.1.0/tools/online-migration-mysql2openGauss-3.1.0.tar.gz
-    tar -zxvf online-migration-mysql2openGauss-3.1.0.tar.gz
-    ```
+- 停止
 
-2.  修改配置文件。配置文件的路径为online-migration-mysql2openGauss-3.1.0/config.yml。
+  ```
+  sh gs_replicate.sh stop mysql-opengauss workspace.id
+  ```
 
-    配置文件示例如下：
+- 卸载
 
-    ```
-    #openGauss config
-    openGauss_conn:  
-      host: "127.0.0.1"  
-      port: "5432"  
-      user: "opengauss"  
-      password: "password123"  
-      database: "postgres" 
-    
-    #mysql config
-    mysql_conn:  
-      host: "127.0.0.1"  
-      port: "3306"  
-      user: "mysql"  
-      password: "password123"  
-      database: "mysql"
-    ```
-
-3.  运行命令。
-
-    ```
-    cd online-migration-mysql2openGauss-3.1.0
-    java -jar ./online-migration-mysql-3.1.0.jar
-    ```
-
-4.  高性能运行命令。在Kunpeng-920 2p openEuler机器上执行如下命令。
-
-    ```
-    cd online-migration-mysql2openGauss-3.1.0
-    numactl -C 0-31 -m 0 java -Xms15G -Xmx25G -jar ./online-migration-mysql-3.1.0.jar
-    ```
+  ```
+  sh gs_replicate.sh uninstall mysql-opengauss workspace.id
+  ```
 
 
 ## 注意事项<a name="section146019322411"></a>
 
--   当前支持MySQL IUD操作（insert、update、delete）产生的增量数据迁移至openGauss。
--   支持迁移openGauss数据库兼容的MySQL DDL语句，对于不兼容的DDL，迁移时会报错处理（openGauss在完善对DDL的兼容性）。
--   为保证事务的顺序和一致性，不支持skip\_event, limit\_table, skip\_table等设置。
--   MySQL需要5.7及以上版本。
--   MySQL参数设置要求为：log\_bin=ON, binlog\_format=ROW, binlog\_row\_image=FULL, gtid\_mode = ON。
--   先进行全量迁移，再进行增量迁移，全量迁移可基于[chameleon](https://gitee.com/opengauss/openGauss-tools-chameleon)工具完成。
--   增量迁移支持的数据类型：数值类型（int，tinyint，smallint，mediumint，bigint，float，double，decimal），字符类型（char，varchar，text），时间类型（date，time，datetime，timestamp，year），二进制类型（binary，varbinary，blob）。
+- 当前支持MySQL IUD操作（insert、update、delete）产生的增量数据迁移至openGauss。
+
+- 支持迁移openGauss数据库兼容的MySQL DDL语句，对于不兼容的DDL，迁移时会报错处理（openGauss在完善对DDL的兼容性）。
+
+- 为保证事务的顺序和一致性，不支持skip\_event, limit\_table, skip\_table等设置。
+
+- MySQL需要5.7及以上版本。
+
+- MySQL参数设置要求为：log\_bin=ON, binlog\_format=ROW, binlog\_row\_image=FULL, gtid\_mode = ON。若gtid_mode为off，则sink端按照事务顺序串行回放，会降低在线迁移性能。
+
+- 先进行全量迁移，再进行增量迁移，全量迁移可基于[gs_mysync](https://gitee.com/opengauss/openGauss-tools-chameleon)工具完成。
+
+- Kafka中以AVRO格式存储数据，AVRO字段名称[命名规则](https://gitee.com/link?target=https%3A%2F%2Favro.apache.org%2Fdocs%2F1.11.1%2Fspecification%2F%23names)为：
+
+  ```
+  - 以[A-Za-z_]开头
+  - 随后仅包含[A-Za-z0-9_]
+  ```
+
+  因此，对于MySQL中的标识符命名，包括表名、列名等，需满足上述命名规范，否则在线迁移会报错。
 
