--- a/content/zh/docs/DataBaseReference/平台和客户端兼容性.md
+++ b/content/zh/docs/DataBaseReference/平台和客户端兼容性.md
@@ -38,7 +38,7 @@
 
 **默认值：**1024
 
->![](C:/Users/liyang/Desktop/暂存/20230302/10-503.1-集中式-管理员指南 (1)/public_sys-resources/icon-note.gif) **说明：** 
+>![](public_sys-resources/icon-note.gif) **说明：** 
 >目前能返回的最大长度是1073741823，超出此长度后会有out of memory的报错。
 
 ## max\_function\_args<a name="zh-cn_topic_0283137548_zh-cn_topic_0237124743_zh-cn_topic_0059778871_s1a3d3c95fbda4e20a65cb3400cf6a418"></a>
@@ -114,7 +114,7 @@
 
 **默认值：**""
 
->![](C:/Users/liyang/Desktop/暂存/20230302/10-503.1-集中式-管理员指南 (1)/public_sys-resources/icon-note.gif) **说明：** 
+>![](public_sys-resources/icon-note.gif) **说明：** 
 >
 >-   当前只支持[表1 兼容性B模式配置项](#table18793103274617)。
 >-   配置多个兼容性配置项时，相邻配置项用逗号隔开，例如：set b\_format\_behavior\_compat\_options='enable\_set\_variables,set\_session\_transaction';
