update sharding discribute description

--- a/content/zh/docs/AboutopenGauss/分布式数据库能力.md
+++ b/content/zh/docs/AboutopenGauss/分布式数据库能力.md
@@ -6,7 +6,7 @@
 
 ## 特性简介<a name="section179114112911"></a>
 
-基于分布式中间件shardingsphere使openGauss具备分布式数据库能力。使用16个鲲鹏920（128核）节点组网（1\*shardingsphere-proxy ,7\*shardingsphere-jdbc,8\*openGauss）时，完美sharding性能\>1000万tpmc。
+基于分布式中间件shardingsphere使openGauss具备分布式数据库能力。使用32个鲲鹏920\(128核\)节点组网\(1\*shardingsphere-proxy ,11\*shardingsphere-jdbc,20\*openGauss\)时，完美sharding性能\>2100万tpmc。
 
 ## 客户价值<a name="section121868185910"></a>
 
@@ -18,7 +18,8 @@
 
 ## 特性增强<a name="section18502924493"></a>
 
-无。
+1. 支持事务内语句读写分离能力。
+2. 支持聚集算子计算能力，实现数据库跨分片表关联查询能力。
 
 ## 特性约束<a name="section139558268916"></a>
 
