修改gsql操作系统元命令\timing的计算方式

--- a/content/docs-lite/zh/docs/ToolandCommandReference/元命令参考.md
+++ b/content/docs-lite/zh/docs/ToolandCommandReference/元命令参考.md
@@ -903,7 +903,7 @@ openGauss=# \sf
 </tr>
 <tr id="zh-cn_topic_0059778645_zh-cn_topic_0058968158_row66697655"><td class="cellrowborder" valign="top" width="21.87%" headers="mcps1.2.4.1.1 "><p id="zh-cn_topic_0059778645_zh-cn_topic_0058968158_p33800946"><a name="zh-cn_topic_0059778645_zh-cn_topic_0058968158_p33800946"></a><a name="zh-cn_topic_0059778645_zh-cn_topic_0058968158_p33800946"></a>\timing   [on|off]</p>
 </td>
-<td class="cellrowborder" valign="top" width="47.11%" headers="mcps1.2.4.1.2 "><p id="zh-cn_topic_0059778645_zh-cn_topic_0058968158_p20643789"><a name="zh-cn_topic_0059778645_zh-cn_topic_0058968158_p20643789"></a><a name="zh-cn_topic_0059778645_zh-cn_topic_0058968158_p20643789"></a>以毫秒为单位显示每条SQL语句的执行时间。</p>
+<td class="cellrowborder" valign="top" width="47.11%" headers="mcps1.2.4.1.2 "><p id="zh-cn_topic_0059778645_zh-cn_topic_0058968158_p20643789"><a name="zh-cn_topic_0059778645_zh-cn_topic_0058968158_p20643789"></a><a name="zh-cn_topic_0059778645_zh-cn_topic_0058968158_p20643789"></a>以毫秒为单位显示每条SQL语句的执行时间（不包括屏显打印时间）。</p>
 </td>
 <td class="cellrowborder" valign="top" width="31.019999999999996%" headers="mcps1.2.4.1.3 "><a name="zh-cn_topic_0059778645_u00148d00b1b34193bfcd39434d92f3bd"></a><a name="zh-cn_topic_0059778645_u00148d00b1b34193bfcd39434d92f3bd"></a><ul id="zh-cn_topic_0059778645_u00148d00b1b34193bfcd39434d92f3bd"><li>on表示打开显示。</li><li>off表示关闭显示。</li></ul>
 </td>
