--- a/content/zh/docs/DataMigrationGuide/反向迁移.md
+++ b/content/zh/docs/DataMigrationGuide/反向迁移.md
@@ -2,82 +2,139 @@
 
 ## 功能介绍<a name="section2900185110452"></a>
 
-反向迁移是指用户将源端数据库迁移到目标数据库，应用切到目标数据库后，再将目标端新产生的数据迁移回源端。反向迁移可满足用户业务迁移逃生的诉求，保持源端、目标端两个库并行运行，在目标端数据库出问题后应用能及时切回源端数据库。openGauss提供reverse-migration工具，将openGauss数据库迁移至MySQL数据库，满足反向迁移要求。
+反向迁移是指将openGauss端产生的增量数据迁移至mysql端。
 
 ## 原理简介<a name="section18226518464"></a>
 
-在openGauss端开启逻辑复制，使用JDBC获取逻辑解码，对逻辑解码进行SQL解析，通过多线程并发迁移到MySQL端。
+debezium opengauss connector的source端，监控openGauss的xlog日志，并将数据的DML操作以AVRO格式写入到kafka；
+
+debezium opengauss connector的sink端，从kafka读取AVRO格式的数据，在mysql端按表并行回放，从而完成数据的DML操作从openGauss在线迁移至mysql。
 
 ## 特性优势<a name="section89821242155416"></a>
 
-利用sysbench对openGauss进行压测，在100张表100个线程并发情况下，针对insert场景，整体在线迁移性能可达3w tps。
-
-## 环境准备<a name="section425318254413"></a>
-
-ARM+openEuler 20.03 或 X86+CentOS 5.7
+反向迁移可满足用户业务迁移逃生的诉求，保持源端、目标端两个库并行运行，在目标端数据库出问题后应用能及时切回源端数据库。
 
 ## 操作步骤<a name="section024513334448"></a>
 
-1.  修改配置文件，配置文件的路径为config.yaml。
+反向迁移gs_replicate依赖MySQL一键式迁移工具gs_rep_portal，可实现反向迁移的安装、启动、停止、卸载整个过程。
 
-    ```
-    og_conn:
-      host: "openGauss_ip"
-      port: "5432"
-      user: "user"
-      password: "password"
-      database: "postgres"
-      charset: "utf8"
-      driver: "org.opengauss.Driver"
-      ASSUME_MIN_SERVER_VERSION: "9.4"//逻辑复制必备属性
-      REPLICATION: "database" //逻辑复制必备属性
-      PREFER_QUERY_MODE: "simple"//逻辑复制必备属性
-    slot:
-      name: "replication_slot"//逻辑复制槽名称
-      include-xids: false//解码数据是否包含xid信息
-      skip-empty-xacts: true//解码事务是否包含空事务
-      waitLSN: ""//逻辑复制槽开启的lsn
-      parallel-decode-num: 20//并行解码个数，最大20
-      white-table-list: ""//库表白名单
-      standby-connection: false//强制备机解码
-      decode-style: "j"//解码格式
-      decoding: "mppdb_decoding"//创建逻辑复制槽的工具
-      runnable_num: 1//并行回放个数
-    mysql:
-      driver: "com.mysql.cj.jdbc.Driver"
-      host: "mysql_ip"
-      port: "3306"
-      user: "user"
-      password: "password"
-      database: "database
-    ```
+1、下载gs_rep_portal
 
-2.  编译命令。
+```
+wget https://opengauss.obs.cn-south-1.myhuaweicloud.com/tools/portal/PortalControl-5.0.0.tar.gz
+```
+2、解压，并进入portal对应目录
 
-    ```
-    mvn clean package
-    ```
+```
+tar -zxvf PortalControl-5.0.0.tar.gz
+cd portal
+```
 
-3.  运行命令。
+3、修改gs_rep_portal配置文件
 
-    ```
-    java -jar ./reverse-migration-mysql-1.0-SNAPSHOT.jar start/create/drop
-    ```
+配置文件位于config目录内，反向迁移相关的配置文件主要包含如下两个，相关参数含义简要说明如下：
 
-4.  高性能运行命令。
+  - toolspath.properties
 
-    在Kunpeng-920 2p openEuler机器上执行如下命令。
+```
+# 反向迁移依赖包路径，可自定义修改
+debezium.path=/ops/portal/tools/debezium/
+# kafka路径，位于反向迁移依赖包路径下，可自定义修改
+kafka.path=/ops/portal/tools/debezium/kafka_2.13-3.2.3/
+# confluent路径，位于反向迁移依赖包路径下，可自定义修改
+confluent.path=/ops/portal/tools/debezium/confluent-5.5.1/
+# connector路径，位于反向迁移依赖包路径下，可自定义修改
+connector.path=/ops/portal/tools/debezium/plugin/
+# debezium opengauss connector路径，位于connector路径下，可自定义修改
+connector.opengauss.path=/ops/portal/tools/debezium/plugin/debezium-connector-opengauss/
+# kafka下载路径
+kafka.pkg.url=https://downloads.apache.org/kafka/3.2.3/kafka_2.13-3.2.3.tgz
+# confluent下载路径
+confluent.pkg.url=https://packages.confluent.io/archive/5.5/confluent-community-5.5.1-2.12.zip
+# debezium opengauss connector下载路径
+connector.opengauss.pkg.url=https://opengauss.obs.cn-south-1.myhuaweicloud.com/latest/tools/replicate-openGauss2mysql-5.0.0.tar.gz
+# 反向迁移依赖安装包路径，可自定义修改
+debezium.pkg.path=/ops/portal/pkg/debezium/
+# kafka包名
+kafka.pkg.name=kafka_2.13-3.2.3.tgz
+# confluent包名
+confluent.pkg.name=confluent-community-5.5.1-2.12.zip
+# openGauss2mysql在线复制包名
+connector.opengauss.pkg.name=replicate-openGauss2mysql-5.0.0.tar.gz
+```
 
-    ```
-    numactl -c 0 -31 -m 0 java -Xms15G -Xmx25Gs -jar ./reverse-migration-mysql-1.0-SNAPSHOT.jar start/create/drop
-    ```
+  - migrationConfig.properties
 
+```
+# mysql用户名
+mysql.user.name=root
+# mysql密码
+mysql.user.password=***
+# mysql数据库ip
+mysql.database.host=127.0.0.1
+# mysql数据库端口
+mysql.database.port=3306
+# mysql数据库名称
+mysql.database.name=test123
+# openGauss用户名
+opengauss.user.name=test
+# openGauss密码
+opengauss.user.password=***
+# openGauss数据库ip
+opengauss.database.host=127.0.0.1
+# openGauss数据库端口
+opengauss.database.port=5432
+# openGauss数据库名称
+opengauss.database.name=test1234
+# openGauss数据库的schema名称
+opengauss.database.schema=test123
+# 反向迁移的安装方式，默认为offline，表示离线安装，需通过参数debezium.pkg.path指定离线依赖安装包的路径；若设置为online，对应在线安装，在线下载的安装包将存放在参数debezium.pkg.path指定的路径
+default.install.mysql.reverse.migration.tools.way=offline
+```
 
-## 卸载工具<a name="section1163973815516"></a>
+4、安装
 
-reverse-migration工具是一个单独的Jar包，删除对应的Jar包即可卸载该工具。
+```
+sh gs_replicate.sh install opengauss-mysql workspace.id
+```
+
+其中workspace.id表示迁移任务id，取值为数字和小写字母的组合，不同的id区分不同的迁移任务，不同迁移任务可并行启动。若使用已存在的workspace.id，并修改其中的配置，请在portal/workspace/${workspace.id}/config/路径下修改对应的配置文件。
+
+5、启动
+
+  ```
+  sh gs_replicate.sh start opengauss-mysql workspace.id
+  ```
+
+6、停止
+
+  ```
+  sh gs_replicate.sh stop opengauss-mysql workspace.id
+  ```
+
+7、卸载
+
+  ```
+  sh gs_replicate.sh uninstall opengauss-mysql workspace.id
+  ```
 
 ## 注意事项<a name="section147831546105511"></a>
 
-反向迁移依赖于openGauss的逻辑解码能力，相关约束请参见[逻辑解码概述](https://opengauss.org/zh/docs/latest/docs/DeveloperGuide/%E9%80%BB%E8%BE%91%E8%A7%A3%E7%A0%81%E6%A6%82%E8%BF%B0.html)。
+- 当前支持openGauss IUD操作（insert、update、delete）产生的增量数据迁移至MySQL。
+
+- openGauss需要3.1.0及以上版本。
+
+- 反向迁移依赖于openGauss的逻辑复制，仅限能进行逻辑复制的用户进行操作。
+
+- openGauss 的GUC参数设置要求为：wal_level = logical。
+
+- 需要调整pg_hba.conf以允许复制（这里的值取决于实际的网络配置以及用于连接的用户）：
+
+  ```
+  host     replication     repuser     0.0.0.0/0     sha256
+  ```
+
+- Kafka中以AVRO格式存储数据，AVRO字段名称[命名规则](https://gitee.com/link?target=https%3A%2F%2Favro.apache.org%2Fdocs%2F1.11.1%2Fspecification%2F%23names)为：
+以[A-Za-z_]开头，随后仅包含[A-Za-z0-9_]
+因此，对于openGauss中的标识符命名，包括表名、列名等，需满足上述命名规范，否则迁移会报错。
 
