增加支持嵌入式C预处理器（ECPG）说明

--- a/content/zh/docs/AboutopenGauss/应用开发接口.md
+++ b/content/zh/docs/AboutopenGauss/应用开发接口.md
@@ -4,6 +4,8 @@
 
 -   **[支持标准开发接口](支持标准开发接口.md)**  
 
+-   **[支持嵌入式SQL预处理器（ECPG）](支持嵌入式SQL预处理器（ECPG）)**  
+
 -   **[PG接口兼容](PG接口兼容.md)**  
 
 -   **[MySQL兼容性增强](MySQL兼容性增强.md)**  
