--- a/content/zh/docs/DataBaseReference/区域和格式化.md
+++ b/content/zh/docs/DataBaseReference/区域和格式化.md
@@ -32,7 +32,7 @@
 -   postgres表示产生与PostgreSQL 8.4版本相匹配的输出，当[DateStyle](#zh-cn_topic_0283136798_zh-cn_topic_0237124733_zh-cn_topic_0059778109_s6464b29eb2274134845cea28f39d915e)参数被设为ISO时。
 -   postgres\_verbose表示产生与PostgreSQL 8.4版本相匹配的输出，当[DateStyle](#zh-cn_topic_0283136798_zh-cn_topic_0237124733_zh-cn_topic_0059778109_s6464b29eb2274134845cea28f39d915e)参数被设为non\_ISO时。
 -   iso\_8601表示产生与在ISO 8601中定义的“格式与代号”相匹配的输出。
--   a表示与numtodsinterval函数相匹配的输出结果，详细请参考[numtodsinterval](时间和日期处理函数和操作符.md#zh-cn_topic_0283136846_zh-cn_topic_0237121972_zh-cn_topic_0059779084_lf9dae2de082b41c094177f70cf798433)。
+-   a表示与numtodsinterval函数相匹配的输出结果，详细请参考[numtodsinterval](../SQLReference/时间和日期处理函数和操作符.md#zh-cn_topic_0283136846_zh-cn_topic_0237121972_zh-cn_topic_0059779084_lf9dae2de082b41c094177f70cf798433)。
 
 >![](public_sys-resources/icon-notice.gif) **须知：**
 > 
