--- a/content/zh/docs/DataBaseReference/用户和权限审计.md
+++ b/content/zh/docs/DataBaseReference/用户和权限审计.md
@@ -79,7 +79,7 @@
 
 **参数说明：** 该参数用于配置全量审计用户列表，对列表中的用户执行的所有可被审计的操作记录审计日志。
 
-该参数属于SIGHUP类型参数，请参考[表1](zh-cn_topic_0289899927.md#zh-cn_topic_0283137176_zh-cn_topic_0237121562_zh-cn_topic_0059777490_t91a6f212010f4503b24d7943aed6d846)中对应设置方法进行设置。
+该参数属于SIGHUP类型参数，请参考[表1](重设参数.md#zh-cn_topic_0283137176_zh-cn_topic_0237121562_zh-cn_topic_0059777490_t91a6f212010f4503b24d7943aed6d846)中对应设置方法进行设置。
 
 **取值范围：** 字符串，多个用户名需使用逗号分隔。
 
@@ -89,7 +89,7 @@
 
 **参数说明：** 该参数用于配置不需要审计的客户端名称及IP地址列表。参数格式为：客户端名称@IP，同pg\_query\_audit函数中的client\_conninfo字段，例如“cm\_agent@127.0.0.1, gs\_clean@127.0.0.1”。
 
-该参数属于SIGHUP类型参数，请参考[表1](zh-cn_topic_0289899927.md#zh-cn_topic_0283137176_zh-cn_topic_0237121562_zh-cn_topic_0059777490_t91a6f212010f4503b24d7943aed6d846)中对应设置方法进行设置。
+该参数属于SIGHUP类型参数，请参考[表1](重设参数.md#zh-cn_topic_0283137176_zh-cn_topic_0237121562_zh-cn_topic_0059777490_t91a6f212010f4503b24d7943aed6d846)中对应设置方法进行设置。
 
 **取值范围：** 字符串，多个配置项需使用逗号分隔。
 
