--- a/content/zh/docs/DataBaseReference/记录日志的内容.md
+++ b/content/zh/docs/DataBaseReference/记录日志的内容.md
@@ -337,7 +337,7 @@ gs\_initdb进行相应系统环境设置时会对默认值进行修改。
 
 **参数说明：**用于设置或者显示模块日志在服务端的可输出性。该参数属于会话级参数，不建议通过gs\_guc工具来设置。
 
-该参数属于USERSET类型参数，设置请参考[表1](zh-cn_topic_0289899927.md#zh-cn_topic_0283137176_zh-cn_topic_0237121562_zh-cn_topic_0059777490_t91a6f212010f4503b24d7943aed6d846)中对应设置的方法进行设置。
+该参数属于USERSET类型参数，设置请参考[表1](重设参数.md#zh-cn_topic_0283137176_zh-cn_topic_0237121562_zh-cn_topic_0059777490_t91a6f212010f4503b24d7943aed6d846)中对应设置的方法进行设置。
 
 **取值范围：**字符串
 
