资源池化资料整改

--- a/content/zh/docs/AboutopenGauss/系统架构.md
+++ b/content/zh/docs/AboutopenGauss/系统架构.md
@@ -28,6 +28,6 @@ openGauss资源池化架构支持1主7备，主节点支持读写，备机横向
 |------|-----------------------------------------------------------------------------------------------------------------------------------------|
 | DMS  | DMS是动态库，集成在数据库内部，通过TCP/RDMA网络传输PAGE内容，将主备内存融合，提供内存池化能力，以此实现备机实时一致性读功能。                                                                  |
 | DSS  | DSS是独立进程，直接管理磁阵裸设备，并对外提供类似分布式文件系统的能力。通过共享内存和客户端API动态库，为数据库提供创建文件、删除文件、扩展和收缩文件、读写文件的能力。                                                  |
-| 共享存储 | 支持企业级存储和分布式存储。与传统建库相比，共享存储将目录分为三种类型，每实例独占且不共享、每实例独占且共享、所有实例共享。其中需要共享的目录均需存放到共享存储上，而不共享的目录存放在本地盘上。另外备机建库只需要建隶属于自己的目录，不需要再次创建所有实例共享的目录结构。 |
+| 共享存储 | 支持企业级存储和分布式存储。与传统建库相比，资源池化将目录分为三种类型，每实例独占且不共享、每实例独占且共享、所有实例共享。其中需要共享的目录均需存放到共享存储上，而不共享的目录存放在本地盘上。另外备机建库只需要建隶属于自己的目录，不需要再次创建所有实例共享的目录结构。 |
 | OCK-RDMA | 通过OCK RDMA降低DMS主备页面交换时延，开启OCK RDMA，备机一致性读时延性能提升20%+。 |
 |SCM      | 基于持久化内存的SCM加速，实现同等内存成本下性能提升30%。|
