--- a/content/zh/docs/DataBaseReference/资源池化参数.md
+++ b/content/zh/docs/DataBaseReference/资源池化参数.md
@@ -1,4 +1,4 @@
-# 共享存储参数<a name="ZH-CN_TOPIC_0000001371524841"></a>
+# 资源池化参数<a name="ZH-CN_TOPIC_0000001371524841"></a>
 
 ## ss\_enable\_dss<a name="section14941640131"></a>
 
@@ -12,8 +12,8 @@
 
 >![](public_sys-resources/icon-note.gif) **说明：** 
 >-   ss\_enable\_dss参数在单机模式下默认off。
->-   若开启共享存储模式需要将此参数设置为on。
->-   om自动安装共享存储模式后，此参数默认为on。
+>-   若开启资源池化模式需要将此参数设置为on。
+>-   om自动安装资源池化模式后，此参数默认为on。
 
 ## ss\_enable\_dms<a name="section715761611422"></a>
 
@@ -27,8 +27,8 @@
 
 >![](public_sys-resources/icon-note.gif) **说明：** 
 >-   ss\_enable\_dms参数在单机模式下默认off。
->-   若开启共享存储模式需要将此参数设置为on。
->-   om自动安装共享存储模式后，此参数默认为on。
+>-   若开启资源池化模式需要将此参数设置为on。
+>-   om自动安装资源池化模式后，此参数默认为on。
 
 ## ss\_enable\_ssl<a name="section95293415425"></a>
 
@@ -60,7 +60,7 @@
 
 ## ss\_instance\_id<a name="section28801541163"></a>
 
-**参数说明：** 共享存储实例ID，根据用户安装时指定DN生成，该参数不允许修改。
+**参数说明：** 资源池化实例ID，根据用户安装时指定DN生成，该参数不允许修改。
 
 该参数属于POSTMASTER类型参数，请参考[表1](重设参数.md#zh-cn_topic_0283137176_zh-cn_topic_0237121562_zh-cn_topic_0059777490_t91a6f212010f4503b24d7943aed6d846)中对应设置方法进行设置。
 
@@ -234,34 +234,18 @@
 
 ## ss_log_level
 
-<<<<<<< HEAD:content/zh/docs/DataBaseReference/共享存储参数.md
-<<<<<<< HEAD:content/zh/docs/DataBaseReference/共享存储参数.md
-**参数说明：**共享存储的日志级别。
-=======
-**参数说明：** 共享存储的日志级别。
->>>>>>> 5810101f6 (共享存储参数冲突处理):content/zh/docs/Developerguide/共享存储参数.md
+**参数说明：** 资源池化的日志级别。
 
 该参数属于POSTMASTER类型参数，请参考[表1](重设参数.md#zh-cn_topic_0283137176_zh-cn_topic_0237121562_zh-cn_topic_0059777490_t91a6f212010f4503b24d7943aed6d846)中对应设置方法进行设置。
 
 7代表着run日志，255代表debug日志和run日志都开启。
 
-<<<<<<< HEAD:content/zh/docs/DataBaseReference/共享存储参数.md
-**取值范围：**整型，0~887。
-=======
-**参数说明：** 日志级别。
-
-该参数属于POSTMASTER类型参数，请参考[表1](重设参数.md#zh-cn_topic_0283137176_zh-cn_topic_0237121562_zh-cn_topic_0059777490_t91a6f212010f4503b24d7943aed6d846)中对应设置方法进行设置。
-
 **取值范围：** 整型，0~887。
->>>>>>> 41349baa1 (共享存储相关内容完善):content/zh/docs/Developerguide/共享存储参数.md
-=======
-**取值范围：** 整型，0~887。
->>>>>>> 5810101f6 (共享存储参数冲突处理):content/zh/docs/Developerguide/共享存储参数.md
 
 **默认值：** 7
 
 >![](public_sys-resources/icon-note.gif) **说明：** 
->-   高并发场景下，如果配置debug日志，其他参数默认的情况下，会出现消息线程频繁打日志，CM显示备机节点的状态不是normal的情况，尽管此时集群正常。因为在共享存储环境下，备机节点的CM获取节点状态也会走消息请求。
+>-   高并发场景下，不建议配置debug日志。此时如果配置debug日志，其他参数采用默认值，消息线程会频繁打印日志。该场景下可能出现消息线程繁忙导致处理CM查询节点状态超时，因此显示备节点的状态不是normal的情况。
 
 ## ss_log_backup_file_count
 
@@ -285,7 +269,7 @@
 
 ## ss_enable_aio
 
-**参数说明：** 是否开启DSS异步IO功能，用于提升共享存储下脏页落盘的速度。
+**参数说明：** 是否开启DSS异步IO功能，用于提升资源池化下脏页落盘的速度。
 
 该参数属于SIGHUP类型参数，请参考[表1](重设参数.md#zh-cn_topic_0283137176_zh-cn_topic_0237121562_zh-cn_topic_0059777490_t91a6f212010f4503b24d7943aed6d846)中对应设置方法进行设置。
 
