--- a/content/zh/docs/BriefTutorial/资源池化.md
+++ b/content/zh/docs/BriefTutorial/资源池化.md
@@ -1,20 +1,20 @@
-# 主备共享存储<a name="ZH-CN_TOPIC_0000001374841129"></a>
+# 资源池化<a name="ZH-CN_TOPIC_0000001374841129"></a>
 
 ## 特性简介<a name="section5152529165610"></a>
 
-主备共享存储特性主要提供主备机共享一份存储的能力，提供一种主备共享存储的新HA部署形态，解决传统HA部署下存储容量较单机翻倍的问题，满足降低存储容量及成本的诉求。并可选通过OCK RDMA提升备机实时一致性读能力。
+资源池化特性主要提供主备机共享一份存储的能力，提供一种新HA部署形态，解决传统HA部署下存储容量较单机翻倍的问题，满足降低存储容量及成本的诉求，同时备机支持实时一致性读。
 
 ## 架构介绍<a name="section190917443263"></a>
 
-主备共享存储整体架构图如下所示。
+资源池化整体架构图如下所示。
 
-**图 1**  主备共享存储架构图<a name="fig38139561096"></a>  
-![](figures/主备共享存储架构图.png "主备共享存储架构图")
+**图 1**  资源池化架构图<a name="fig38139561096"></a>  
+![](figures/资源池化架构图.png "资源池化架构图")
 
 -   磁阵设备并且已经安装ultrapath多路径软件，磁阵设备可用。
 -   分布式存储服务DSS（Distributed Storage Service）
 
-    DSS是独立进程，直接管理磁阵裸设备，并对外提供类似分布式文件系统的能力。通过共享内存和客户端API动态库，为数据库提供创建文件、删除文件、扩展和收缩文件、读写文件的能力。
+    DSS组件分为DSSAPI和DSSSERVER。DSSSERVER是独立进程，直接管理磁阵裸设备，并对外提供类似分布式文件系统的能力；DSSAPI是动态库，集成在数据库内部。DSS组件通过共享内存和客户端API动态库，为数据库提供创建文件、删除文件、扩展和收缩文件、读写文件的能力。
 
 -   分布式内存服务DMS（Distributed Memory Service）
 
@@ -26,24 +26,24 @@
 
 -   主备共享一份数据，显著降低传统HA的存储容量。
 -   主备之间去除了日志复制功能，增加了主备页面交换功能，备机支持实时一致性读。
--   默认情况下，主备之间是通过TCP网络进行页面实时交换。为了降低页面交换的延迟，提供引入计算的OCK RDMA动态库方式，提升备机实时一致性的性能。
+-   默认情况下，主备之间是通过TCP网络进行页面实时交换。为了降低页面交换的延迟，可选通过OCK RDMA动态库加速备机实时一致性的性能。
 
 ## 适用场景与限制<a name="section13547620181410"></a>
 
 -   要求存储设备是磁阵，磁阵的LUN需要支持SCSI3的PR协议（包括PR OUT（“PERSISTENT RESERVE OUT”）PR IN（“PERSISTENT RESERVE IN”）和INQUIRY）， 用于实现集群IO FENCE；除此之外, 还需要支持SCSI3的CAW协议（COMPARE AND WRITE）, 用于实现共享磁盘锁。如Dorado 5000 V3磁阵设备。
 -   openGauss下可以支持部署8个备机。
--   由于主备共享存储依赖类似分布式文件系统的功能来实现备机实时一致性读能力，因此要求文件元数据变更越少越好。基于性能考虑，本特性只支持段页式表。
+-   由于资源池化依赖类似分布式文件系统的功能来实现备机实时一致性读能力，因此要求文件元数据变更越少越好。基于性能考虑，本特性只支持段页式表。
 -   只支持主备部署在同一磁阵设备上，不支持容灾部署，也不支持主备混合部署（如主和备部署在不同的磁阵设备上）。
 -   主备页面交换通过RDMA加速，依赖CX5网卡，并且依赖计算提供的OCK  RDMA动态库。
 -   暂不支持备机重建及节点替换、节点修复等能力。
--   不支持从传统HA部署升级到基于主备共享存储部署。
+-   不支持从传统数据库部署升级到资源池化数据库部署。
 
 ## 手动安装示例<a name="section188071153201818"></a>
 
-与传统gs\_initdb建库相比，共享存储建库将目录分为三种类型，每实例独占且不共享、每实例独占且共享、所有实例共享。其中需要共享的目录均需存放到磁阵设备上，而不共享的目录存放在本地盘上。另外备机建库只需要建隶属于自己的目录，不需要再次创建所有实例共享的目录结构。主备共享存储新增了相关GUC参数，以及将系统表存储方式从页式切换到段页式。
+与传统gs\_initdb建库相比，资源池化建库将目录分为三种类型，每实例独占且不共享、每实例独占且共享、所有实例共享。其中需要共享的目录均需存放到磁阵设备上，而不共享的目录存放在本地盘上。另外备机建库只需要建隶属于自己的目录，不需要再次创建所有实例共享的目录结构。资源池化新增了相关GUC参数，以及将系统表存储方式从页式切换到段页式。
 
 >![](public_sys-resources/icon-note.gif) **说明：** 
->此处的单步手动安装是指工程编译之后，可单步执行相关命令进行共享存储建库。openGauss常规安装请参照《安装指南》。
+>此处的单步手动安装是指工程编译之后，可单步执行相关命令进行资源池化建库。openGauss常规安装请参照《安装指南》。
 
 -   前置条件
     -   工程已完成代码编译，编译请参见[软件安装编译](../CompilationGuide/版本编译.md)。
@@ -68,7 +68,7 @@
 
         perctrl：用于对dss相关工具和进程赋予读写权限的可执行工具。
 
-    3.  创建DSS服务端进程及建共享存储库需要的配置文件。
+    3.  创建DSS服务端进程及建资源池化库需要的配置文件。
 
         测试目录\(假设为/data/test\)
 
@@ -124,7 +124,7 @@
         dssserver -D /data/ss_test/dss_home &
         ```
 
-    5.  <a name="li23296624419"></a>通过gs\_initdb建立共享存储库。
+    5.  <a name="li23296624419"></a>通过gs\_initdb建立资源池化库。
 
         ```
         gs_initdb -D /data/ss_test/dn_primary --nodename=single_node -w Gauss_234 --vgname="+data,+log" --enable-dss --dms_url="0:127.0.0.1:1611,1:127.0.0.1:1711" -I 0 --socketpath="UDS:/data/ss_test/dss_home/.dss_unix_d_socket"
@@ -132,13 +132,13 @@
 
         其中新增5个相关参数：
 
-        -   --vgname 卷组名，指定共享存储库建在哪个卷组下，这个名字与dss\_vg\_conf.ini文件中的配置项相关，卷组名需要出现在配置文件中，并且以‘+’字符开头。
-        -   --enable\_dss 表示共享存储库要建到DSS里。
+        -   --vgname 卷组名，指定资源池化库建在哪个卷组下，这个名字与dss\_vg\_conf.ini文件中的配置项相关，卷组名需要出现在配置文件中，并且以‘+’字符开头。
+        -   --enable\_dss 表示资源池化库要建到DSS里。
         -   --dms\_url "0:127.0.0.1:1611,1:127.0.0.1:1711"，格式为instance\_id:ip:port。
         -   -I  指定当前节点的实例号，取值范围\[0,63\]。
         -   --socketpath 指定DSS客户端（这里指集成到数据库相关可执行文件中的DSS客户端动态库）与服务端通信使用的unix domain socket存放的位置。
 
-    6.  建共享存储库成功，通过gs\_ctl start命令拉取数据库进程。
+    6.  建资源池化库成功，通过gs\_ctl start命令拉取数据库进程。
 
         ```
         gs_ctl start -D /data/ss_test/dn_primary
@@ -149,7 +149,7 @@
 
 ## OCK RDMA使用示例<a name="section19145134925317"></a>
 
-共享存储特性提供备机实时一致性读功能，主备之间页面交换可选择通过RDMA加速。此章节简要描述如何在共享存储中开启RDMA通信功能。
+资源池化特性提供备机实时一致性读功能，主备之间页面交换可选择通过RDMA加速。此章节简要描述如何在资源池化中开启RDMA通信功能。
 
 -   前置条件
 
@@ -203,7 +203,7 @@
             3.  PACKAGES： 获取到的ock rpc二进制包名（与机器操作系统架构匹配）。
             4.  PATH\_TO\_SCP： 拷贝路径。
             5.  GAUSSHOME：  同openGauss配置的环境变量GAUSSHOME一致。
-            6.  OCK\_RPC\_LIB\_PATH：ock rpc二进制所在路径，共享存储会通过动态加载方式使用，请务必配置正确。
+            6.  OCK\_RPC\_LIB\_PATH：ock rpc二进制所在路径，资源池化会通过动态加载方式使用，请务必配置正确。
 
         3.  执行部署脚本ock\_rpc\_opengauss.sh。
 
@@ -215,7 +215,7 @@
             >实现功能：
             >-   完成集群中OCK RPC二进制包的部署，解压和拷贝。
             >-   配置好相关的环境变量$OCK\_RPC\_LIB\_PATH。
-            >-   配置集群节点UCX环境变量。\(UCX为基于RDMA开发的通信组件，OCK RPC是在UCX基础上开发的适配共享存储的通信组件。\)
+            >-   配置集群节点UCX环境变量。\(UCX为基于RDMA开发的通信组件，OCK RPC是在UCX基础上开发的适配资源池化的通信组件。\)
 
         4.  配置其他参数环境变量。
 
@@ -238,7 +238,7 @@
     3.  执行[1](#li0988195961613)\~[5](#li23296624419)完成gs\_initdb建库。
     4.  修改postgresql.conf配置文件。
 
-        配置ss\_interconnect\_type=RDMA，添加配置项ss\_rdma\_work\_config与ss\_ock\_log\_path。参数说明及配置请参见[共享存储参数](../DatabaseReference/共享存储参数.md)。
+        配置ss\_interconnect\_type=RDMA，添加配置项ss\_rdma\_work\_config与ss\_ock\_log\_path。参数说明及配置请参见[资源池化参数](../DatabaseReference/资源池化参数.md)。
 
         示例：
 
