--- a/content/zh/docs/DataBaseReference/通信矩阵.md
+++ b/content/zh/docs/DataBaseReference/通信矩阵.md
@@ -440,7 +440,7 @@
 
 <p id="p6932101684715"><a name="p6932101684715"></a><a name="p6932101684715"></a>【说明】默认为8000</p>
 
-<p id="p193281611475"><a name="p193281611475"></a><a name="p193281611475"></a>【安装后是否默认开启】应用共享存储模式，且开启Scrlock后自动开启</p>
+<p id="p193281611475"><a name="p193281611475"></a><a name="p193281611475"></a>【安装后是否默认开启】应用资源池化模式，且开启Scrlock后自动开启</p>
 
 </td>
 
@@ -466,7 +466,7 @@
 
 <td class="cellrowborder" valign="top" headers="mcps1.2.13.1.10 "><p id="p91642512195"><a name="p91642512195"></a><a name="p91642512195"></a>无</p>
 
-<td class="cellrowborder" valign="top" headers="mcps1.2.13.1.10 "><p id="p91642512195"><a name="p91642512195"></a><a name="p91642512195"></a>共享存储</p>
+<td class="cellrowborder" valign="top" headers="mcps1.2.13.1.10 "><p id="p91642512195"><a name="p91642512195"></a><a name="p91642512195"></a>资源池化</p>
 
 </td>
 
@@ -500,11 +500,11 @@
 
 </td>
 
-<td class="cellrowborder" valign="top" width="8.552565769730919%" headers="mcps1.2.13.1.8 "><p id="p16932716144710"><a name="p16932716144710"></a><a name="p16932716144710"></a>【作用】共享存储模式下主备节点间通信</p>
+<td class="cellrowborder" valign="top" width="8.552565769730919%" headers="mcps1.2.13.1.8 "><p id="p16932716144710"><a name="p16932716144710"></a><a name="p16932716144710"></a>【作用】资源池化模式下主备节点间通信</p>
 
-<p id="p6932101684715"><a name="p6932101684715"></a><a name="p6932101684715"></a>【说明】为可配置端口，端口范围1024~65535，共享存储模式下主备节点通信时星型连接，节点间互为服务端%客户端，服务器端口参见SS_INTERCONNECT_URL参数指定，客户端端口为随机端口。通常该值为dataPortBase+20</p>
+<p id="p6932101684715"><a name="p6932101684715"></a><a name="p6932101684715"></a>【说明】为可配置端口，端口范围1024~65535，资源池化模式下主备节点通信时星型连接，节点间互为服务端%客户端，服务器端口参见SS_INTERCONNECT_URL参数指定，客户端端口为随机端口。通常该值为dataPortBase+20</p>
 
-<p id="p193281611475"><a name="p193281611475"></a><a name="p193281611475"></a>【安装后是否默认开启】应用共享存储模式时开启</p>
+<p id="p193281611475"><a name="p193281611475"></a><a name="p193281611475"></a>【安装后是否默认开启】应用资源池化模式时开启</p>
 
 </td>
 
@@ -530,7 +530,7 @@
 
 <td class="cellrowborder" valign="top" headers="mcps1.2.13.1.10 "><p id="p91642512195"><a name="p91642512195"></a><a name="p91642512195"></a>无</p>
 
-<td class="cellrowborder" valign="top" headers="mcps1.2.13.1.10 "><p id="p91642512195"><a name="p91642512195"></a><a name="p91642512195"></a>共享存储</p>
+<td class="cellrowborder" valign="top" headers="mcps1.2.13.1.10 "><p id="p91642512195"><a name="p91642512195"></a><a name="p91642512195"></a>资源池化</p>
 
 </td>
 
@@ -632,7 +632,7 @@
 
 <p id="p6932101684715"><a name="p6932101684715"></a><a name="p6932101684715"></a>【说明】为可配置端口，端口范围1024~65535，源端口为随机端口，目的端口：通过DSS_NODES_LIST参数指定。该值通常为dataPortBase+10</p>
 
-<p id="p193281611475"><a name="p193281611475"></a><a name="p193281611475"></a>【安装后是否默认开启】应用共享存储模式时开启</p>
+<p id="p193281611475"><a name="p193281611475"></a><a name="p193281611475"></a>【安装后是否默认开启】应用资源池化模式时开启</p>
 
 </td>
 
@@ -658,7 +658,7 @@
 
 <td class="cellrowborder" valign="top" headers="mcps1.2.13.1.10 "><p id="p91642512195"><a name="p91642512195"></a><a name="p91642512195"></a>无</p>
 
-<td class="cellrowborder" valign="top" headers="mcps1.2.13.1.10 "><p id="p91642512195"><a name="p91642512195"></a><a name="p91642512195"></a>共享存储</p>
+<td class="cellrowborder" valign="top" headers="mcps1.2.13.1.10 "><p id="p91642512195"><a name="p91642512195"></a><a name="p91642512195"></a>资源池化</p>
 
 </td>
 
