--- a/content/zh/docs/Releasenotes/特性介绍.md
+++ b/content/zh/docs/Releasenotes/特性介绍.md
@@ -33,14 +33,14 @@
 
 此处说明的是openGauss 3.1.1版本，在3.1.0版本功能的基础上，新增如下特性：
 
--   主备共享存储
-    提供主备机共享一份存储的能力，实现基于磁阵设备的主备共享存储HA部署形态，可选通过OCK RDMA提升备机实时一致性读能力。该特性主要依赖两个自研的公共组件：
+-   资源池化
+    提供主备机共享一份存储的能力，提供一种新的HA部署形态，解决传统HA部署下教单机存储容量翻倍的问题，同时提供备机实时一致性读能力。该特性主要依赖两个自研的公共组件：
     -   分布式存储服务DSS（Distributed Storage Service）
-        DSS是独立进程，直接管理磁阵裸设备，并对外提供类似分布式文件系统的能力。通过共享内存和客户端API动态库，为数据库提供创建文件、删除文件、扩展和收缩文件、读写文件的能力。
+        DSS组件分为DSSAPI和DSSSERVER。DSSSERVER是独立进程，直接管理磁阵裸设备，并对外提供类似分布式文件系统的能力；DSSAPI是动态库，集成在数据库内部。DSS组件通过共享内存和客户端API动态库，为数据库提供创建文件、删除文件、扩展和收缩文件、读写文件的能力。
     -   分布式内存服务DMS（Distributed Memory Service）
         DMS是动态库，集成在数据库内部，通过TCP/RDMA网络传输PAGE内容，将主备内存融合，提供内存池化能力，以此实现备机实时一致性读功能，即主机事务提交后，在备机立即能够读到，不存在延迟读现象（事务隔离级别为Read-Committed）。
-    共享存储通过OCK RDMA降低DMS主备页面交换时延。TCP下的备机一致性读进行时延对比，开启OCK RDMA，备机一致性读时延至少要降低20%。
-    共享存储通过OCK SCRLock降低获取分布式锁的时延。开启OCK SCRLock，获取分布式锁的远端时延降低6倍+。
+    资源池化可选通过OCK RDMA降低DMS主备页面交换时延。TCP下的备机一致性读进行时延对比，开启OCK RDMA，备机一致性读时延至少要降低20%。
+    资源池化可选通过OCK SCRLock降低获取分布式锁的时延。开启OCK SCRLock，获取分布式锁的远端时延降低6倍+。
 
 -   CM部署和数据库部署解耦，CM支持增量升级
     支持在已有数据库进程时，CM解耦化安装，同时支持CM组件单独升级，增强数据库集群可靠性。
