[doc] 增量迁移和全量迁移特性描述文档

--- a/content/zh/docs/DataMigrationGuide/增量迁移.md
+++ b/content/zh/docs/DataMigrationGuide/增量迁移.md
@@ -10,7 +10,8 @@ debezium mysql connector的source端，监控mysql数据库的binlog日志，并
 
 ## 特性优势<a name="section2124757135"></a>
 
-利用sysbench对MySQL进行压测，在openEuler arm操作系统2p Kunpeng-920机器，针对混合IUD场景，10张表50个线程（insert-30线程，update-10线程，delete-10线程），在线迁移性能可达3w tps。
+- 利用sysbench对MySQL进行压测，2路鲲鹏920 CPU、openEuler操作系统下，针对混合IUD场景，10张表50个线程（insert-30线程，update-10线程，delete-10线程），在线迁移性能可达3w tps。
+- 目标数据库的数据是有序的，且保证事务一致性。
 
 ## 操作步骤<a name="section102376152046"></a>
 
@@ -33,7 +34,7 @@ debezium mysql connector的source端，监控mysql数据库的binlog日志，并
 
   配置文件位于config目录内，增量迁移相关的配置文件主要包含如下两个，相关参数含义简要说明如下：
 
-  （1）toolspath.properties
+  - toolspath.properties
 
   ```
   # 增量迁移依赖包路径，可自定义修改
@@ -62,7 +63,7 @@ debezium mysql connector的source端，监控mysql数据库的binlog日志，并
   connector.mysql.pkg.name=replicate-mysql2openGauss-5.0.0.tar.gz
   ```
 
-  （2）migrationConfig.properties
+  - migrationConfig.properties
 
   ```
   # mysql用户名
@@ -97,7 +98,7 @@ debezium mysql connector的source端，监控mysql数据库的binlog日志，并
   sh gs_replicate.sh install mysql-opengauss workspace.id
   ```
 
-  其中workspace.id表示迁移任务id，取值为数字和小写字母的组合，不同的id区分不同的迁移任务，不同迁移任务可并行启动。若使用已存在的workspace.id，并修改其中的配置，请在portal/workspace/${workspace.id}/config/路径下修改对应的配置文件。
+  其中workspace.id表示迁移任务id，取值为数字和小写字母的组合，不同的id区分不同的迁移任务，不同迁移任务可并行启动。若未设置workspace.id，则使用其默认值1。若使用已存在的workspace.id，并修改其中的配置，请在portal/workspace/${workspace.id}/config/路径下修改对应的配置文件。
 
 - 启动
 
@@ -117,6 +118,7 @@ debezium mysql connector的source端，监控mysql数据库的binlog日志，并
   sh gs_replicate.sh uninstall mysql-opengauss workspace.id
   ```
 
+上述安装、启动、停止、卸载命令均不会在后台运行，若需在后台运行，请在命令后添加&符号。
 
 ## 注意事项<a name="section146019322411"></a>
 
@@ -134,10 +136,8 @@ debezium mysql connector的source端，监控mysql数据库的binlog日志，并
 
 - Kafka中以AVRO格式存储数据，AVRO字段名称[命名规则](https://gitee.com/link?target=https%3A%2F%2Favro.apache.org%2Fdocs%2F1.11.1%2Fspecification%2F%23names)为：
 
-  ```
   - 以[A-Za-z_]开头
   - 随后仅包含[A-Za-z0-9_]
-  ```
-
+  
   因此，对于MySQL中的标识符命名，包括表名、列名等，需满足上述命名规范，否则在线迁移会报错。
 
