--- a/content/zh/docs/DataMigrationGuide/全量迁移.md
+++ b/content/zh/docs/DataMigrationGuide/全量迁移.md
@@ -2,13 +2,13 @@
 
 ## 功能介绍<a name="section051261814117"></a>
 
-全量迁移gs_mysync是一个用Python3编写的将MySQL迁移至openGauss的实时复制工具，支持初始全量数据的复制以及后续增量数据的实时在线复制功能。gs_mysync通过一次初始化配置，使用只读模式，将MySQL的数据全量拉取到openGauss。支持在同一快照下，表间数据并行迁移。
+全量迁移gs_mysync是一个用Python3编写的将MySQL迁移至openGauss的复制工具，支持初始全量数据的复制功能。gs_mysync通过一次初始化配置，使用只读模式，将MySQL的数据全量拉取到openGauss。支持在同一快照下，表间数据并行迁移。
 
 全量迁移支持的功能：支持表及表数据、视图、触发器、自定义函数、存储过程的全量迁移
 
 ## 特性优势<a name="section9194174261317"></a>
 
-基于sysbench测试模型，在Kunpeng-920 2p服务器上，MySQL数据库10张表（无主键）单表数据量在500万以上时，gs_mysync使用20并发迁移数据至openGauss，整体全量迁移性能可达300M/s以上。
+基于sysbench测试模型，2路鲲鹏920 CPU、openEuler操作系统下，MySQL数据库10张表（无主键）单表数据量在500万以上时，gs_mysync使用20并发迁移数据至openGauss，整体全量迁移性能可达300M/s以上。
 
 ## 环境准备<a name="section425318254413"></a>
 
@@ -35,7 +35,7 @@ ARM+openEuler 20.03 或 X86+CentOS 5.7
 
   配置文件位于config目录内，全量迁移相关的配置文件主要包含如下两个，相关参数含义简要说明如下：
 
-  （1）toolspath.properties
+  - toolspath.properties
 
   ```
   # 全量迁移python虚拟环境的路径，可自定义修改
@@ -50,7 +50,7 @@ ARM+openEuler 20.03 或 X86+CentOS 5.7
   chameleon.pkg.name=chameleon-5.0.0-py3-none-any.whl
   ```
 
-  （2）migrationConfig.properties
+  - migrationConfig.properties
 
   ```
   # 用于指定全量迁移是否迁移对象，包括函数、存储过程、触发器、视图，默认为yes；若设置为no，表示不迁移对象
@@ -87,7 +87,7 @@ ARM+openEuler 20.03 或 X86+CentOS 5.7
   sh gs_mysync.sh install workspace.id
   ```
 
-  其中workspace.id表示迁移任务id，取值为数字和小写字母的组合，不同的id区分不同的迁移任务，不同迁移任务可并行启动。若使用已存在的workspace.id，并修改其中的配置，请在portal/workspace/${workspace.id}/config/路径下修改对应的配置文件。
+  其中workspace.id表示迁移任务id，取值为数字和小写字母的组合，不同的id区分不同的迁移任务，不同迁移任务可并行启动。若未设置workspace.id，则使用其默认值1。若使用已存在的workspace.id，并修改其中的配置，请在portal/workspace/${workspace.id}/config/路径下修改对应的配置文件。
 
 - 启动
 
@@ -106,3 +106,6 @@ ARM+openEuler 20.03 或 X86+CentOS 5.7
   ```
   sh gs_mysync.sh uninstall workspace.id
   ```
+
+上述安装、启动、停止、卸载命令均不会在后台运行，若需在后台运行，请在命令后添加&符号。
+
