资源池化架构图、部分内容修改

--- a/content/zh/docs/BriefTutorial/资源池化.md
+++ b/content/zh/docs/BriefTutorial/资源池化.md
@@ -9,7 +9,7 @@
 资源池化整体架构图如下所示。
 
 **图 1**  资源池化架构图<a name="fig38139561096"></a>  
-![](figures/资源池化架构图.png "资源池化架构图")
+![](figures/资源池化架构图.jpg "资源池化架构图")
 
 -   磁阵设备并且已经安装ultrapath多路径软件，磁阵设备可用。
 -   分布式存储服务DSS（Distributed Storage Service）
@@ -31,12 +31,12 @@
 ## 适用场景与限制<a name="section13547620181410"></a>
 
 -   要求存储设备是磁阵，磁阵的LUN需要支持SCSI3的PR协议（包括PR OUT（“PERSISTENT RESERVE OUT”）PR IN（“PERSISTENT RESERVE IN”）和INQUIRY）， 用于实现集群IO FENCE；除此之外, 还需要支持SCSI3的CAW协议（COMPARE AND WRITE）, 用于实现共享磁盘锁。如Dorado 5000 V3磁阵设备。
--   openGauss下可以支持部署8个备机。
+-   最高支持1主7备部署。
 -   由于资源池化依赖类似分布式文件系统的功能来实现备机实时一致性读能力，因此要求文件元数据变更越少越好。基于性能考虑，本特性只支持段页式表。
 -   只支持主备部署在同一磁阵设备上，不支持容灾部署，也不支持主备混合部署（如主和备部署在不同的磁阵设备上）。
--   主备页面交换通过RDMA加速，依赖CX5网卡，并且依赖计算提供的OCK  RDMA动态库。
+-   主备页面交换可选通过RDMA加速，依赖CX5网卡，并且依赖计算提供的OCK  RDMA动态库。
 -   暂不支持备机重建及节点替换、节点修复等能力。
--   不支持从传统数据库部署升级到资源池化数据库部署。
+-   不支持传统模式数据库和资源池化模式数据库相互升级。
 
 ## 手动安装示例<a name="section188071153201818"></a>
 
