--- a/content/zh/docs/DataBaseReference/资源池化参数.md
+++ b/content/zh/docs/DataBaseReference/资源池化参数.md
@@ -245,7 +245,7 @@
 **默认值：** 7
 
 >![](public_sys-resources/icon-note.gif) **说明：** 
->-   高并发场景下，不建议配置debug日志。此时如果配置debug日志，其他参数采用默认值，消息线程会频繁打印日志。该场景下可能出现消息线程繁忙导致处理CM查询节点状态超时，因此显示备节点的状态不是normal的情况。
+>-   高并发场景下，不建议配置debug日志。此时如果配置debug日志，其他参数采用默认值，消息线程会频繁打印日志。该场景下可能出现消息线程繁忙导致处理CM查询节点状态请求超时，因此显示备节点的状态不是normal的情况。
 
 ## ss_log_backup_file_count
 
