--- a/content/zh/docs/DatabaseOMGuide/升级前必读.md
+++ b/content/zh/docs/DatabaseOMGuide/升级前必读.md
@@ -114,7 +114,7 @@ openGauss升级版本要求如[表1](#table7961729)所示。
 
 - 升级中会连接template0库，期间执行create database会报错。
 
-- openGauss资源池化模式集群仅支持从基线版本大于等于5.0.0版本升级到之后的版本。
+- openGauss资源池化模式集群仅支持从基线版本大于等于5.0.0的版本升级到之后的版本。
 
 - openGauss资源池化模式集群不支非资源池化集群升级到资源池化集群以及资源池化集群升级到非资源池化集群，不支持RDMA模式下的升级。
 
