--- a/content/zh/docs/Technicalwhitepaper/部署方案.md
+++ b/content/zh/docs/Technicalwhitepaper/部署方案.md
@@ -129,7 +129,7 @@ openGauss支持的CPU和OS见下表。
 
 ## 部署方案介绍<a name="section185145125515"></a>
 
-整体部署方案可以分为三类：单机部署、一主一备部署、一主多备部署。
+整体部署方案可以分为四类：单机部署、一主一备部署、一主多备部署、资源池化部署。
 
 -   单机部署
 
@@ -159,10 +159,9 @@ openGauss支持的CPU和OS见下表。
     **图 3**  一主多备部署形态图<a name="fig5294135131017"></a>  
     ![](figures/一主多备部署形态图.png "一主多备部署形态图")
 
-+ 资源池化部署
+-   资源池化部署
 
-  基于磁阵设备的主备资源池化HA部署形态，只支持主备部署在同一磁阵设备上，不支持容灾部署，也不支持主备混合部署（如主和备部署在不同的磁阵设备上）。
+    基于磁阵设备的主备资源池化HA部署形态，只支持主备部署在同一磁阵设备上，不支持容灾部署，也不支持主备混合部署（如主和备部署在不同的磁阵设备上）。
 
-  图4 资源池化部署形态图
-
-  ![](figures/资源池化部署形态图.png)
+    **图 4** 资源池化部署形态图
+    ![](figures/资源池化部署形态图.png "资源池化部署形态图")
