--- a/content/docs-lite/zh/docs/Releasenotes/版本介绍.md
+++ b/content/docs-lite/zh/docs/Releasenotes/版本介绍.md
@@ -1,6 +1,6 @@
 # 版本介绍<a name="ZH-CN_TOPIC_0289899200"></a>
 
-openGauss 5.0.0是openGauss发布的第三个release版本，该版本生命周期为3年。当前文档说明范围仅限轻量化版。
+openGauss 5.0.0是openGauss发布的第三个LTS版本，该版本生命周期为3年。当前文档说明范围仅限轻量化版。
 
 5.0.0与之前的版本特性功能保持兼容，主要功能如下：
 
